# inscribe

./: AGENTS.md  README.md  biome.json  index.html  package.json  plan.txt  pnpm-lock.yaml  vite.config.ts
.codex/skills/inscribe-i18n/: SKILL.md
.codex/skills/inscribe-ui-modernization/: SKILL.md
.codex/skills/inscribe-workspace-backend/: SKILL.md
.github/workflows/: editor.yml
apps/editor/: biome.json  package.json
apps/editor/src/: App.css  App.tsx  i18n.ts  index.css
apps/editor/src-tauri/: Cargo.toml  tauri.conf.json
apps/editor/src-tauri/icons/: icon.icns
apps/editor/src-tauri/src/: lib.rs  main.rs
apps/editor/src/components/: app-sidebar.tsx  theme-provider.tsx
apps/editor/src/components/ui/: badge.tsx  card.tsx  dropdown-menu.tsx  switch.tsx  textarea.tsx
apps/editor/src/lib/: api.ts
apps/editor/src/locales/: en.ts  ko.ts  zhHans.ts  zhHant.ts
apps/site/: index.html  package.json  tsconfig.json
apps/site/scripts/: build-data.ts
apps/site/src/: main.tsx
apps/site/templates/: blog-deploy.yml
content/posts/: hello-inscribe.md
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/: app-sidebar.tsx
src/components/ui/: accordion.tsx  button.tsx  dialog.tsx  input.tsx  separator.tsx  sidebar.tsx
src/lib/: api.ts
src/locales/: de.ts  en.ts  fr.ts  ja_JP.ts  zhHans.ts  zhHant.ts
src/types/: inscribe.ts
